<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp"
    tools:context="StudentInterface.StudentRegister">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_register_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register2"
        android:layout_marginTop="20dp" />


    <TextView
        android:id="@+id/login_now_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_login"
        android:textSize="16sp"
        android:textStyle="bold" />



        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember to save your email and password or you'll lose access to your account."
            android:textAlignment="center" />



</LinearLayout>
