<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".StudentInterface.ChooseStudentOrAdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_gravity="center">


        <TextView
            android:id="@+id/select_user_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_userbig"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>


        <Button
            android:id="@+id/student_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/student"
            android:textSize="20sp"
            android:backgroundTint="@color/blue"
            android:gravity="center"/>
        <Button
            android:id="@+id/admin_btn"
            android:backgroundTint="@color/blue"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/admin"
            android:textSize="20sp"
            android:gravity="center"/>


    </LinearLayout>


</LinearLayout>